--- a/mysr/index.html
+++ b/mysr/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       height: 100vh;
       display: flex;
-      justify-content: center;
+      justify-content: center;　/*  */
       align-items: center;
     }
     img {
@@ -23,5 +23,3 @@
   <img src="sine.png" alt="笑顔" />
 </body>
 </html>
-
-/*  */
