--- a/mysr/index.html
+++ b/mysr/index.html
@@ -24,4 +24,13 @@
 </body>
 </html>
 
-<!– ああああ –>
+<!– ぼくらはみんな　生きている
+生きているから　歌うんだ
+ぼくらはみんな　生きている
+生きているから　かなしいんだ
+手のひらを太陽に　すかしてみれば
+まっかに流れる　ぼくのちしお
+ミミズだって　オケラだって
+アメンボだって
+みんな　みんな生きているんだ
+友だちなんだ –>
